--- a/shelter/style.css
+++ b/shelter/style.css
@@ -17,14 +17,14 @@
 }
 
 .logo_title{
-    font: Georgia;
+    font-family: Georgia;
     font-weight: 400;
     font-size: 32px;
     color: #F1CDB3;
 }
 
 .logo_subtitle{
-    font: Arial;
+    font-family: Arial;
     font-weight: 400;
     font-size: 13px;
     color:#FFFFFF;
@@ -38,7 +38,7 @@
 .menu_options{
     color: #FFFFFF;
     text-decoration: none;
-    font: Arial;
+    font-family: Arial;
     font-weight: 400;
     font-size: 15px;
     margin: 15px;
@@ -47,7 +47,7 @@
 
 .menu_options_first{
     color: #FFFFFF;
-    font: Arial;
+    font-family: Arial;
     font-weight: 400;
     font-size: 15px;
     margin: 15px;
@@ -60,13 +60,94 @@
 .start_background{
     height: 908px;
     padding-top: 30px;
-    background: linear-gradient(to bottom right,#5B483A, #262425,  #211F20);
+    background: linear-gradient(to bottom right,#5B483A,#211F20, #262425);
+    background-image: url("./images/start-screen-background.png");
     
 }
+
+.start_screen{
+    display: flex;
+    width: 1200px;
+    height: 728px;
+    margin-top: 120px;
+
+}
+
+.start_screen_text{
+    display: flex;
+    flex-direction: column;
+    margin: 40px;
+}
+
+.heading_ssc{
+    font-family: Georgia;
+    font-weight: 400;
+    font-size: 44px;
+    color: #FFFFFF;
+
+}
+
+.subheading_ssc{
+    font-family: Arial;
+    font-weight: 400;
+    font-size: 15px;
+    color: #CDCDCD;
+    width: 460px;
+    height: 72px;
+    margin-bottom: 42px;
+
+}
+
+.button_primary{
+    padding: 15px, 45px, 15px, 45px;
+    background-color: #F1CDB3;
+    border: none;
+    border-radius: 100px;
+    font-family: Georgia;
+    font-weight: 400;
+    font-size: 17px;
+    color: #292929;
+    width: 207px;
+    height: 52px;
+}
+
+.about{
+
+    width: 1280px;
+    height: 588px;
+}
+
+.about_content{
+    display: flex;
+    justify-content: space-evenly;
+    width: 1200px;
+    height: 408px;
+    margin: 90px 40px;
+}
+
+
+
+.heading_about{
+    box-sizing: border-box;
+    font-family: Georgia;
+    font-weight: 400;
+    font-size: 35px;
+    color: #545454;
+    width: 370px;
+    height: 90px;
+}
+
+.subheading_about{
+    font-family: Arial;
+    font-weight: 400;
+    font-size: 15px;
+    color: #4C4C4C;
+    margin-bottom: 42px;    
+}
+
 
 body{
     max-width: 1280px;
     min-width: 1280px;
     margin:0 auto;
 }
-
