--- a/shelter/style.css
+++ b/shelter/style.css
@@ -1,4 +1,4 @@
-
+/*header*/
 .head_nav_lay{
     display: flex;
     justify-content: space-between;
@@ -56,46 +56,237 @@
     text-underline-offset: 4px;
     
 }
+/**/
 
+
+/*start_screen*/
 .start_background{
     height: 908px;
     padding-top: 30px;
     background: linear-gradient(to bottom right,#5B483A,#211F20, #262425);
     background-image: url("./images/start-screen-background.png");
-    
 }
 
-.start_screen{
-    display: flex;
+.start_screen_content{
+    position: relative;
     width: 1200px;
     height: 728px;
-    margin-top: 120px;
-
+    top: 90px;
+    left: 40px;
 }
 
-.start_screen_text{
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    margin: 40px;
+.content{
+    position: absolute;
+    top: 163px;
 }
 
-.heading_ssc{
+.ssc_heading{
     font-family: Georgia;
-    font-weight: 400;
-    font-size: 44px;
     color: #FFFFFF;
-
+    font-size: 44px;
+    font-weight: 400;
+    line-height: 57.2px;
+    text-align: left;
+    width: 310px;
+    height: 114px;
+    margin-bottom: 42px;
 }
 
-.subheading_ssc{
+.ssc_subheading{
     font-family: Arial;
-    font-weight: 400;
     font-size: 15px;
+    font-weight: 400;
+    line-height: 24px;
+    text-align: left;
     color: #CDCDCD;
     width: 460px;
     height: 72px;
     margin-bottom: 42px;
+}
+
+.ssc_button{
+    padding: 15px, 45px, 15px, 45px;
+    background-color: #F1CDB3;
+    border: none;
+    border-radius: 100px;
+    width: 207px;
+    height: 52px;
+    font-family: Georgia;
+    font-weight: 400;
+    font-size: 17px;
+    color: #292929;
+}
+
+
+.picture_dog{
+    position: absolute;
+    width: 698px;
+    height: 728px;
+    left: 502px;
+    top: 30px;
+}
+/**/
+
+
+/*about*/
+.about{
+    position: relative;
+    width: 1280px;
+    height: 588px;
+}
+
+.about_content{
+    position: absolute;
+    width: 1200px;
+    height: 408px;
+    left: 40px;
+    top: 80px;
+}
+
+.about_pets{
+    position: absolute;
+    left: 175px;
+}
+
+.content_txt{
+    position: absolute;
+    width: 430px;
+    height: 380px;
+    left: 595px;
+    right: 175px;
+    bottom: 14px;
+}
+
+.ab_heading{
+    font-family: Georgia;
+    font-size: 35px;
+    font-weight: 400;
+    line-height: 45.5px;
+    letter-spacing: 0.06em;
+    text-align: left;
+    color: #545454;
+    margin-bottom: 25px;
+    margin-top: 0;
+}
+
+.ab_subheading{
+    margin-top: 25px;
+    font-family: Arial;
+    font-size: 15px;
+    font-weight: 400;
+    line-height: 24px;
+    text-align: left;
+    color: #4C4C4C;
+}
+/**/
+
+.pets{
+    position: relative;
+    width: 1280px;
+    height: 877px;
+    background-color: #F6F6F6;
+}
+
+.pets_content{
+    position: absolute;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: flex-start;
+    width: 1200px;
+    height: 697px;
+    bottom: 80px;
+    left: 40px;
+}
+
+.pets_heading{
+    font-family: Georgia;
+    font-size: 35px;
+    font-weight: 400;
+    line-height: 45.5px;
+    letter-spacing: 0.06em;
+    width: 400px;
+    height: 90;
+    margin-top: 0;
+    margin-bottom: 50px;
+    color: #545454;
+    text-align: center;
+}
+
+.card{
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: center;
+    width: 270px;
+    height: 435px;
+    background-color: #FAFAFA;
+    border-radius: 9px;
+}
+
+
+
+.animal_names{
+    font-family: Georgia;
+    font-size: 20px;
+    font-weight: 400;
+    line-height: 22.72px;
+    letter-spacing: 0.06em;
+    text-align: center;
+    color: #545454;
+    margin-top: 30px;
+    margin-bottom: 30px;
+}
+
+.animal_buttons{
+    width: 187px;
+    height: 52px;
+    padding: 15px 45px 15px 45px;
+    border-radius: 100px;
+    border-width: 2px ;
+    border-style: solid;
+    border-color: #F1CDB3;
+    font-family: Georgia;
+    font-weight: 400;
+    font-size: 17px;
+    color: #292929;
+    margin-bottom: 30px;
+}
+
+.animal_button_cen{
+    width: 187px;
+    height: 52px;
+    padding: 15px 45px 15px 45px;
+    border-radius: 100px;
+    border-width: 2px ;
+    border-style: solid;
+    border-color: #F1CDB3;
+    font-family: Georgia;
+    font-weight: 400;
+    font-size: 17px;
+    color: #292929;
+    margin-bottom: 30px;
+}
+
+.slider{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    width: 1200px;
+    height: 435px;
+}
+
+.button_arrow{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 52px;
+    height: 52px;
+    padding: 23px 19px 23px 19px;
+    border-radius: 100px;
+    border-width: 2px ;
+    border-style: solid;
+    border-color: #F1CDB3;
 
 }
 
@@ -104,56 +295,14 @@
     background-color: #F1CDB3;
     border: none;
     border-radius: 100px;
+    width: 261px;
+    height: 52px;
     font-family: Georgia;
     font-weight: 400;
     font-size: 17px;
     color: #292929;
-    width: 207px;
-    height: 52px;
+    margin-top: 60px;
 }
-
-.about{
-
-    width: 1280px;
-    height: 588px;
-}
-
-.about_content{
-    display: flex;
-    justify-content: space-evenly;
-    width: 1200px;
-    height: 408px;
-    margin: 90px 40px;
-}
-
-.content{
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: baseline;
-    width: 430px;
-    height: 380px;
-
-}
-
-.heading_about{
-
-    font-family: Georgia;
-    font-weight: 400;
-    font-size: 35px;
-    color: #545454;
-    width: 370px;
-    height: 90px;
-}
-
-.subheading_about{
-    font-family: Arial;
-
-    font-weight: 400;
-    font-size: 15px;
-    color: #4C4C4C;
-}
-
 
 body{
     max-width: 1280px;
