--- a/shelter/style.css
+++ b/shelter/style.css
@@ -180,6 +180,8 @@
 }
 /**/
 
+
+/*Pets*/
 .pets{
     position: relative;
     width: 1280px;
@@ -246,6 +248,7 @@
     border-width: 2px ;
     border-style: solid;
     border-color: #F1CDB3;
+    background-color: #FAFAFA;
     font-family: Georgia;
     font-weight: 400;
     font-size: 17px;
@@ -253,20 +256,7 @@
     margin-bottom: 30px;
 }
 
-.animal_button_cen{
-    width: 187px;
-    height: 52px;
-    padding: 15px 45px 15px 45px;
-    border-radius: 100px;
-    border-width: 2px ;
-    border-style: solid;
-    border-color: #F1CDB3;
-    font-family: Georgia;
-    font-weight: 400;
-    font-size: 17px;
-    color: #292929;
-    margin-bottom: 30px;
-}
+
 
 .slider{
     display: flex;
@@ -303,6 +293,219 @@
     color: #292929;
     margin-top: 60px;
 }
+
+/**/
+
+/*Help*/
+
+.help{
+    position: relative;
+    width: 1280px;
+    height: 611px;
+}
+
+.help_content{
+    position: absolute;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 1200px;
+    height: 431px;
+    top: 80px;
+    left: 40px;
+
+
+
+}
+
+.help_title{
+    width: 308px;
+    height: 90px;
+    font-family: Georgia;
+    font-size: 35px;
+    font-weight: 400;
+    text-align: center;
+    color: #545454;
+    margin-top: 0px;
+
+}
+
+.help_list{
+    display: flex;
+    flex-wrap: wrap; 
+    justify-content: center;
+    align-content: space-between;
+}
+
+
+.help_container{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    height: 113px;
+    margin: 60px;
+    margin-bottom: 0;
+
+}
+
+.list_names{
+    font-family: Georgia;
+    font-size: 20px;
+    font-weight: 400;
+    text-align: center;
+    color: #545454;
+    margin-top: 30px;
+
+}
+
+/**/
+
+
+/*donation*/
+.donation{
+    position: relative;
+    background-color: #F6F6F6;
+    width: 1280px;
+    height: 462px;
+}
+
+.donation_content{
+    position: absolute;
+    display: flex;
+    justify-content: space-around;
+    width: 915px;
+    height: 282px;
+    top: 80px;
+    left: 183px;
+
+}
+
+.content_inf{
+    display: flex;
+    flex-direction: column;
+    width: 380px;
+    height: 282px;
+    margin-left: 30px;
+}
+
+.help_heading{
+    font-family: Georgia;
+    font-size: 35px;
+    font-weight: 400;
+    width: 300px;
+    height: 90px;
+    color: #545454;
+    text-align: left;
+    margin: 0;
+}
+
+.help_subheading{
+    font-family: Georgia;
+    font-size: 15px;
+    font-weight: 400;
+    width: 307px;
+    height: 17px;
+    color: #545454;
+    text-align: left;
+    margin-top: 20px;
+    margin-bottom: 20px;
+}
+
+.card_number{
+    display: flex;
+    align-items: center;
+    width: 294px;
+    height: 23px;
+    padding: 10px 15px 10px 15px;
+    border-radius: 9px;
+    background-color: #F1CDB3;
+    margin-bottom: 20px;
+
+}
+
+.card_num_txt{
+    font-family: Georgia;
+    font-size: 20px;
+    font-weight: 400;
+    color: #545454;
+    margin: 0;
+    margin-left: 15px;
+}
+
+.donation_inf{
+    font-family: Arial;
+    font-size: 12px;
+    font-style: italic;
+    font-weight: 400;
+    text-align: left;
+    width: 380px;
+    height: 72px;
+    color: #B2B2B2;
+    margin: 0;
+}
+
+/**/
+
+/*footer*/
+
+footer{
+    position: relative;
+    width: 1280px;
+    height: 350px;
+    background: linear-gradient(to bottom right,#5B483A,#211F20, #262425);
+    background-image: url("./images/start-screen-background.png");
+}
+
+.footer_content{
+    position: absolute;
+    display: flex;
+    align-items: center;
+    width: 1200px;
+    height: 310px;
+    top: 40px;
+    left: 40px;
+
+}
+
+.footer_contacts{
+    display: flex;
+    flex-direction: column;
+    margin-right: 160px;
+    width: 278px;
+    height: 234px;
+}
+
+.footer_heading{
+    font-family: Georgia;
+    font-size: 35px;
+    font-weight: 400;
+    text-align: left;
+    color: #FFFFFF;
+    margin-top: 0;
+}
+
+.footer_string{
+    display: flex;
+    align-items: center;
+    height: 32px;
+    margin-bottom: 40px;
+}
+
+.footer_info{
+    font-family: Georgia;
+    font-size: 20px;
+    font-weight: 400;
+    margin-left: 20px;
+    color: #F1CDB3;
+
+
+}
+
+.footer_picture{
+
+}
+
+/**/
 
 body{
     max-width: 1280px;
