--- a/shelter/style.css
+++ b/shelter/style.css
@@ -16,14 +16,14 @@
     margin-bottom: 0;
 }
 
-.logo_title{
+.logo_title, .logo_title_pets{
     font-family: Georgia;
     font-weight: 400;
     font-size: 32px;
     color: #F1CDB3;
 }
 
-.logo_subtitle{
+.logo_subtitle, .logo_subtitle_pets{
     font-family: Arial;
     font-weight: 400;
     font-size: 13px;
@@ -35,7 +35,7 @@
     flex-direction: row;
 }
 
-.menu_options{
+.menu_options, .menu_options_pets{
     color: #FFFFFF;
     text-decoration: none;
     font-family: Arial;
@@ -45,7 +45,7 @@
     
 }
 
-.menu_options_first{
+.menu_options_first, .menu_options_second{
     color: #FFFFFF;
     font-family: Arial;
     font-weight: 400;
@@ -57,6 +57,88 @@
     
 }
 /**/
+
+
+/*our pets header*/
+
+.header_container{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 0;
+    width: 1280px;
+    height: 120px;
+}
+
+.logo_title_pets{
+    color: #545454;
+}
+
+.logo_subtitle_pets{
+    color:#545454;
+}
+
+
+.menu_options_pets{
+    color: #545454;
+    
+}
+
+.menu_options_second{
+    color: #545454;
+    
+}
+
+.our_pets_heading{
+    width: 40px;
+    height: 90px;
+    margin-top: 80px;
+    margin-bottom: 45px;
+}
+
+.pets_our{
+    background-color: #F6F6F6;
+    width: 1280px;
+    height: 1342px;
+}
+
+.our_pets_content{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 1200px;
+    height: 1162px;
+    padding: 80px 40px;
+    padding-bottom: 100px;
+
+}
+
+
+
+.cards_container{
+    display: flex;
+    align-content: space-around;
+    flex-wrap: wrap; 
+    justify-content: space-between;
+    width: 1200px;
+    height: 930px;
+}
+
+.navigation{
+    display: flex;
+    justify-content: space-between;
+    margin-top: 45px;
+    width: 340px;
+    height: 52px;
+}
+
+
+/**/
+
+
+
+
+
 
 
 /*start_screen*/
@@ -201,7 +283,8 @@
     left: 40px;
 }
 
-.pets_heading{
+/**/
+.pets_heading, .our_pets_heading{
     font-family: Georgia;
     font-size: 35px;
     font-weight: 400;
@@ -501,11 +584,12 @@ footer{
 
 }
 
-.footer_picture{
-
-}
 
 /**/
+
+
+
+
 
 body{
     max-width: 1280px;
