--- a/shelter/style.css
+++ b/shelter/style.css
@@ -4,19 +4,33 @@ html{
 
 
 button{
-    transition: background-color 0.4s;
+    transition: background-color 0.4s, border-color 0.4s;
 }
 
 .ssc_button:hover ,.button_primary:hover{
-    background-color: rgba(242, 218, 201);
+    background-color: rgba(253, 220, 196, 1);
+    
 }
 
-.animal_buttons:hover{
-    background-color: #F1CDB3;
+.card:hover{
+    .animal_buttons{
+        background-color: rgba(253, 220, 196, 1);
+        border-color: rgba(253, 220, 196, 1);
+    }
 }
 
+.button_arrow:hover{
+    background-color: rgba(253, 220, 196, 1);
+    border-color: rgba(253, 220, 196, 1);
+}
 
+.menu_options:hover{
+    color: rgba(250, 250, 250, 1);
+}
 
+.menu_options_pets:hover{
+    color: rgba(41, 41, 41, 1);
+}
 
 
 
@@ -59,7 +73,8 @@ button{
 }
 
 .menu_options, .menu_options_pets{
-    color: #FFFFFF;
+    color: rgba(205, 205, 205, 1);
+    transition: color 0.4s;
     text-decoration: none;
     font-family: Arial;
     font-weight: 400;
@@ -107,7 +122,7 @@ button{
 
 
 .menu_options_pets{
-    color: #545454;
+    color: rgba(84, 84, 84, 1);
     
 }
 
@@ -123,7 +138,7 @@ button{
     margin-bottom: 45px;
 }
 
-.pets_our{
+.our_friends{
     background-color: #F6F6F6;
     width: 1280px;
     height: 1342px;
@@ -159,7 +174,9 @@ button{
     height: 52px;
 }
 
-
+.nav_buttons{
+    background-color: none;
+}
 /**/
 
 
@@ -176,7 +193,7 @@ button{
     background-image: url("./images/start-screen-background.png");
 }
 
-.start_screen_content{
+.not_only{
     position: relative;
     width: 1200px;
     height: 728px;
@@ -215,7 +232,7 @@ button{
 
 .ssc_button{
     padding: 15px, 45px, 15px, 45px;
-    background-color: #F1CDB3;
+    background-color: rgba(241, 205, 179, 1);
     border: none;
     border-radius: 100px;
     width: 207px;
@@ -376,7 +393,7 @@ button{
     height: 435px;
 }
 
-.button_arrow{
+.button_arrow,.nav_buttons{
     display: flex;
     align-items: center;
     justify-content: center;
@@ -445,6 +462,7 @@ button{
     flex-wrap: wrap; 
     justify-content: center;
     align-content: space-between;
+    align-items: baseline;
 }
 
 
@@ -472,7 +490,7 @@ button{
 
 
 /*donation*/
-.donation{
+.in_addiction{
     position: relative;
     background-color: #F6F6F6;
     width: 1280px;
@@ -531,6 +549,7 @@ button{
     background-color: #F1CDB3;
     margin-bottom: 20px;
 
+
 }
 
 .card_num_txt{
@@ -540,6 +559,7 @@ button{
     color: #545454;
     margin: 0;
     margin-left: 15px;
+    text-decoration: none;
 }
 
 .donation_inf{
@@ -602,6 +622,7 @@ footer{
 }
 
 .footer_info{
+    text-decoration: none;
     font-family: Georgia;
     font-size: 20px;
     font-weight: 400;
