--- a/shelter/style.css
+++ b/shelter/style.css
@@ -32,32 +32,54 @@ button{
     color: rgba(41, 41, 41, 1);
 }
 
+.menu_options_first ,.menu_options_second{
+    pointer-events: none;
+    cursor: default;
+}
 
+.logo_link{
+    text-decoration: none;
+}
+
+
+ 
+ 
+.start_background{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+
+    height: 908px;
+    background: linear-gradient(120deg, #5B483A 15%, #262425, #211F20);
+    background-image: url("./images/start-screen-background.png");
+    background-size: cover;
+}
 
 /*header*/
 .head_nav_lay, .head_nav_lay_our{
+   
     display: flex;
     justify-content: space-between;
     align-items: center;
+    margin-top: 30px;
     width: 1200px;
     height: 60px;
-    margin-left: 40px;
-
 }
 
 .logo_flex{
     display: flex;
     flex-direction: column;
-    margin-top: 0;
-    margin-bottom: 0;
+    width: 184px;
+    height: 60px;
+
 }
 
 .logo_title, .logo_title_pets{
-    text-decoration: none;
     font-family: Georgia;
     font-weight: 400;
     font-size: 32px;
     color: #F1CDB3;
+    margin-bottom: 10px;
 }
 
 .logo_subtitle, .logo_subtitle_pets{
@@ -69,7 +91,10 @@ button{
 
 .nav_menu{
     display: flex;
-    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    width: 443px;
+    height: 27px;
 }
 
 .menu_options, .menu_options_pets{
@@ -79,7 +104,7 @@ button{
     font-family: Arial;
     font-weight: 400;
     font-size: 15px;
-    margin: 15px;
+
     
 }
 
@@ -88,7 +113,6 @@ button{
     font-family: Arial;
     font-weight: 400;
     font-size: 15px;
-    margin: 15px;
     text-decoration: underline #F1CDB3;
     text-decoration-thickness: 3px;
     text-underline-offset: 4px;
@@ -101,15 +125,14 @@ button{
 
 .header_container{
     display: flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
-    padding: 0;
-    width: 1280px;
     height: 120px;
 }
 
 .head_nav_lay_our{
-    margin-left: 0;
+    margin: 0;
 }
 
 .logo_title_pets{
@@ -132,32 +155,31 @@ button{
 }
 
 .our_pets_heading{
-    width: 40px;
-    height: 90px;
-    margin-top: 80px;
-    margin-bottom: 45px;
+
 }
 
 .our_friends{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
     background-color: #F6F6F6;
-    width: 1280px;
     height: 1342px;
 }
 
 .our_pets_content{
+    margin-top: 80px;
     display: flex;
     flex-direction: column;
     align-items: center;
+    justify-content: space-between;
     width: 1200px;
     height: 1162px;
-    padding: 80px 40px;
-    padding-bottom: 100px;
-
 }
 
 
 
 .cards_container{
+    margin: 0;
     display: flex;
     align-content: space-around;
     flex-wrap: wrap; 
@@ -186,24 +208,23 @@ button{
 
 
 /*start_screen*/
-.start_background{
-    height: 908px;
-    padding-top: 30px;
-    background: linear-gradient(to bottom right,#5B483A,#211F20, #262425);
-    background-image: url("./images/start-screen-background.png");
-}
+
 
 .not_only{
-    position: relative;
+    display: flex;
+    justify-content: space-between;
     width: 1200px;
     height: 728px;
-    top: 90px;
-    left: 40px;
+    margin-top: 90px;
 }
 
 .content{
-    position: absolute;
-    top: 163px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    width: 460px;
+    height: 322px;
+    margin-top: 163px;
 }
 
 .ssc_heading{
@@ -213,9 +234,7 @@ button{
     font-weight: 400;
     line-height: 57.2px;
     text-align: left;
-    width: 310px;
-    height: 114px;
-    margin-bottom: 42px;
+    margin: 0;
 }
 
 .ssc_subheading{
@@ -225,9 +244,7 @@ button{
     line-height: 24px;
     text-align: left;
     color: #CDCDCD;
-    width: 460px;
-    height: 72px;
-    margin-bottom: 42px;
+    margin: 0;
 }
 
 .ssc_button{
@@ -245,42 +262,37 @@ button{
 
 
 .picture_dog{
-    position: absolute;
     width: 698px;
     height: 728px;
-    left: 502px;
-    top: 30px;
 }
 /**/
 
 
 /*about*/
 .about{
-    position: relative;
-    width: 1280px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
     height: 588px;
 }
 
 .about_content{
-    position: absolute;
+    margin-top: 80px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
     width: 1200px;
     height: 408px;
-    left: 40px;
-    top: 80px;
 }
 
 .about_pets{
-    position: absolute;
-    left: 175px;
+    margin-right: 120px;
 }
 
 .content_txt{
-    position: absolute;
     width: 430px;
     height: 380px;
-    left: 595px;
-    right: 175px;
-    bottom: 14px;
+
 }
 
 .ab_heading{
@@ -289,7 +301,6 @@ button{
     font-weight: 400;
     line-height: 45.5px;
     letter-spacing: 0.06em;
-    text-align: left;
     color: #545454;
     margin-bottom: 25px;
     margin-top: 0;
@@ -301,7 +312,6 @@ button{
     font-size: 15px;
     font-weight: 400;
     line-height: 24px;
-    text-align: left;
     color: #4C4C4C;
 }
 /**/
@@ -309,22 +319,21 @@ button{
 
 /*Pets*/
 .pets{
-    position: relative;
-    width: 1280px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
     height: 877px;
     background-color: #F6F6F6;
 }
 
 .pets_content{
-    position: absolute;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: flex-start;
+    margin-top: 80px;
     width: 1200px;
     height: 697px;
-    bottom: 80px;
-    left: 40px;
 }
 
 /**/
@@ -334,10 +343,8 @@ button{
     font-weight: 400;
     line-height: 45.5px;
     letter-spacing: 0.06em;
-    width: 400px;
-    height: 90;
     margin-top: 0;
-    margin-bottom: 50px;
+    margin-bottom: 60px;
     color: #545454;
     text-align: center;
 }
@@ -345,8 +352,8 @@ button{
 .card{
     display: flex;
     flex-direction: column;
-    justify-content: flex-start;
     align-items: center;
+    justify-content: space-between;
     width: 270px;
     height: 435px;
     background-color: #FAFAFA;
@@ -363,8 +370,7 @@ button{
     letter-spacing: 0.06em;
     text-align: center;
     color: #545454;
-    margin-top: 30px;
-    margin-bottom: 30px;
+
 }
 
 .animal_buttons{
@@ -384,12 +390,19 @@ button{
 }
 
 
-
 .slider{
     display: flex;
     justify-content: space-between;
     align-items: center;
     width: 1200px;
+    height: 435px;
+}
+
+.cards_box{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    width: 990px;
     height: 435px;
 }
 
@@ -426,35 +439,29 @@ button{
 /*Help*/
 
 .help{
-    position: relative;
-    width: 1280px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
     height: 611px;
 }
 
 .help_content{
-    position: absolute;
+    margin-top: 80px;
     display: flex;
     flex-direction: column;
     align-items: center;
+    justify-content: space-between;
     width: 1200px;
     height: 431px;
-    top: 80px;
-    left: 40px;
-
-
-
 }
 
 .help_title{
-    width: 308px;
-    height: 90px;
     font-family: Georgia;
     font-size: 35px;
     font-weight: 400;
     text-align: center;
     color: #545454;
-    margin-top: 0px;
-
+    margin: 0px;
 }
 
 .help_list{
@@ -491,37 +498,34 @@ button{
 
 /*donation*/
 .in_addiction{
-    position: relative;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-between;
     background-color: #F6F6F6;
-    width: 1280px;
     height: 462px;
 }
 
 .donation_content{
-    position: absolute;
+    margin-top: 80px;
     display: flex;
-    justify-content: space-around;
+    justify-content: space-between;
     width: 915px;
     height: 282px;
-    top: 80px;
-    left: 183px;
-
 }
 
 .content_inf{
     display: flex;
     flex-direction: column;
+    justify-content: space-between;
     width: 380px;
     height: 282px;
-    margin-left: 30px;
 }
 
 .help_heading{
     font-family: Georgia;
     font-size: 35px;
     font-weight: 400;
-    width: 300px;
-    height: 90px;
     color: #545454;
     text-align: left;
     margin: 0;
@@ -531,25 +535,21 @@ button{
     font-family: Georgia;
     font-size: 15px;
     font-weight: 400;
-    width: 307px;
-    height: 17px;
     color: #545454;
     text-align: left;
-    margin-top: 20px;
-    margin-bottom: 20px;
+    margin: 0;
 }
 
 .card_number{
     display: flex;
     align-items: center;
+    justify-content: space-between;
     width: 294px;
     height: 23px;
     padding: 10px 15px 10px 15px;
     border-radius: 9px;
     background-color: #F1CDB3;
-    margin-bottom: 20px;
-
-
+    margin: 0;
 }
 
 .card_num_txt{
@@ -557,8 +557,6 @@ button{
     font-size: 20px;
     font-weight: 400;
     color: #545454;
-    margin: 0;
-    margin-left: 15px;
     text-decoration: none;
 }
 
@@ -568,8 +566,6 @@ button{
     font-style: italic;
     font-weight: 400;
     text-align: left;
-    width: 380px;
-    height: 72px;
     color: #B2B2B2;
     margin: 0;
 }
@@ -579,28 +575,27 @@ button{
 /*footer*/
 
 footer{
-    position: relative;
-    width: 1280px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
     height: 350px;
     background: linear-gradient(to bottom right,#5B483A,#211F20, #262425);
     background-image: url("./images/start-screen-background.png");
+    background-size: cover;
 }
 
 .footer_content{
-    position: absolute;
     display: flex;
-    align-items: center;
+    justify-content: space-between;
+    margin-top: 40px;
     width: 1200px;
     height: 310px;
-    top: 40px;
-    left: 40px;
-
 }
 
 .footer_contacts{
     display: flex;
     flex-direction: column;
-    margin-right: 160px;
+    margin-top: 16px;
     width: 278px;
     height: 234px;
 }
@@ -632,6 +627,10 @@ footer{
 
 }
 
+.footer_picture{
+    width: 300px;
+    height: 310px;
+}
 
 /**/
 
@@ -640,7 +639,9 @@ footer{
 
 
 body{
-    max-width: 1280px;
+    box-sizing: border-box;
     min-width: 1280px;
-    margin:0 auto;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: auto;
 }
