--- a/shelter/style.css
+++ b/shelter/style.css
@@ -75,18 +75,24 @@ button{
 }
 
 .logo_title, .logo_title_pets{
+    white-space: pre;
+    color:rgba(241, 205, 179, 1);
     font-family: Georgia;
-    font-weight: 400;
     font-size: 32px;
-    color: #F1CDB3;
+    font-weight: 400;
+    line-height: 35.2px;
+    letter-spacing: 0.06em;
     margin-bottom: 10px;
 }
 
 .logo_subtitle, .logo_subtitle_pets{
+    color: rgba(255, 255, 255, 1);
     font-family: Arial;
-    font-weight: 400;
     font-size: 13px;
-    color:#FFFFFF;
+    font-weight: 400;
+    line-height: 14.95px;
+    letter-spacing: 0.1em;
+
 }
 
 .nav_menu{
@@ -98,24 +104,28 @@ button{
 }
 
 .menu_options, .menu_options_pets{
-    color: rgba(205, 205, 205, 1);
     transition: color 0.4s;
     text-decoration: none;
+    color: rgba(205, 205, 205, 1);
     font-family: Arial;
-    font-weight: 400;
     font-size: 15px;
-
-    
+    font-weight: 400;
+    line-height: 24px;
+    text-align: left;  
 }
 
 .menu_options_first, .menu_options_second{
-    color: #FFFFFF;
-    font-family: Arial;
-    font-weight: 400;
-    font-size: 15px;
+    color: rgba(250, 250, 250, 1);
     text-decoration: underline #F1CDB3;
     text-decoration-thickness: 3px;
     text-underline-offset: 4px;
+    font-family: Arial;
+    font-size: 15px;
+    font-weight: 400;
+    line-height: 24px;
+    text-align: left;
+    
+    
     
 }
 /**/
@@ -154,9 +164,6 @@ button{
     
 }
 
-.our_pets_heading{
-
-}
 
 .our_friends{
     display: flex;
@@ -228,8 +235,8 @@ button{
 }
 
 .ssc_heading{
+    color: rgba(255, 255, 255, 1);
     font-family: Georgia;
-    color: #FFFFFF;
     font-size: 44px;
     font-weight: 400;
     line-height: 57.2px;
@@ -238,12 +245,12 @@ button{
 }
 
 .ssc_subheading{
+    color: rgba(205, 205, 205, 1);
     font-family: Arial;
     font-size: 15px;
     font-weight: 400;
     line-height: 24px;
-    text-align: left;
-    color: #CDCDCD;
+    text-align: left; 
     margin: 0;
 }
 
@@ -254,10 +261,12 @@ button{
     border-radius: 100px;
     width: 207px;
     height: 52px;
-    font-family: Georgia;
-    font-weight: 400;
+    color: rgba(41, 41, 41, 1);
     font-size: 17px;
-    color: #292929;
+    font-weight: 400;
+    line-height: 22.1px;
+    letter-spacing: 0.06em;
+
 }
 
 
@@ -374,6 +383,8 @@ button{
 }
 
 .animal_buttons{
+    display: flex;
+    align-items: center;
     width: 187px;
     height: 52px;
     padding: 15px 45px 15px 45px;
@@ -386,6 +397,9 @@ button{
     font-weight: 400;
     font-size: 17px;
     color: #292929;
+    line-height: 22.1px;
+    letter-spacing: 0.06em;
+    white-space: nowrap;
     margin-bottom: 30px;
 }
 
@@ -431,6 +445,8 @@ button{
     font-weight: 400;
     font-size: 17px;
     color: #292929;
+    line-height: 22.1px;
+    letter-spacing: 0.06em;
     margin-top: 60px;
 }
 
@@ -461,6 +477,8 @@ button{
     font-weight: 400;
     text-align: center;
     color: #545454;
+    line-height: 45.5px;
+    letter-spacing: 0.06em;
     margin: 0px;
 }
 
@@ -489,7 +507,10 @@ button{
     font-weight: 400;
     text-align: center;
     color: #545454;
+    line-height: 23px;
+    letter-spacing: 0.06em;
     margin-top: 30px;
+
 
 }
 
@@ -528,6 +549,8 @@ button{
     font-weight: 400;
     color: #545454;
     text-align: left;
+    line-height: 45.5px;
+    letter-spacing: 0.06em;
     margin: 0;
 }
 
@@ -537,6 +560,8 @@ button{
     font-weight: 400;
     color: #545454;
     text-align: left;
+    line-height: 16.5px;
+    letter-spacing: 0.06em;
     margin: 0;
 }
 
@@ -544,7 +569,7 @@ button{
     display: flex;
     align-items: center;
     justify-content: space-between;
-    width: 294px;
+    width: 319px;
     height: 23px;
     padding: 10px 15px 10px 15px;
     border-radius: 9px;
@@ -558,6 +583,8 @@ button{
     font-weight: 400;
     color: #545454;
     text-decoration: none;
+    line-height: 23px;
+    letter-spacing: 0.06em;
 }
 
 .donation_inf{
@@ -567,6 +594,7 @@ button{
     font-weight: 400;
     text-align: left;
     color: #B2B2B2;
+    line-height: 18px;
     margin: 0;
 }
 
@@ -601,11 +629,14 @@ footer{
 }
 
 .footer_heading{
+    white-space: nowrap;
     font-family: Georgia;
     font-size: 35px;
     font-weight: 400;
     text-align: left;
     color: #FFFFFF;
+    line-height: 45.5px;
+    letter-spacing: 0.06em;
     margin-top: 0;
 }
 
@@ -623,8 +654,8 @@ footer{
     font-weight: 400;
     margin-left: 20px;
     color: #F1CDB3;
-
-
+    line-height: 23px;
+    letter-spacing: 0.06em;
 }
 
 .footer_picture{
